# pin

./: README.md
project/: .gitignore  README.md
project/Code/: CMakeLists.txt  Particle.h  Robot.h  Simu.cpp  Simu.h  State.h  StateStream.cpp  StateStream.h  Timeline.h  Types.h  main.cpp  mainSetup.cpp  robotsui.cpp  robotsui.h  robotsui.ui  robotwidget.cpp  robotwidget.h
project/Data/Projet/competition/: competition_01.constraints  competition_01.stat  competition_01.tlin  competition_02.constraints  competition_02.stat  competition_02.tlin  competition_03.constraints  competition_03.stat  competition_03.tlin
project/Data/Projet/validation/: 01.constraints  01validation_01_01.tlin  02validation_02_02.tlin  03validation_03_03.tlin  04validation_04_04.tlin  05validation_05_05.tlin
project/Data/Training/: 20_20_1_fastrotate.constraints  20_5_01_fastcmd.constraints  20_5_3_slowcmd.constraints  training11.stat
project/Documents/Rendus/: finalPrese_14.pptx
project/Explications/Command/: README.md
